--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.soganote">
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    
 
     <application
         android:allowBackup="true"
@@ -19,9 +22,13 @@
         </activity>
         <activity android:name=".EditActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            >
 
         </activity>
+
+        <activity android:name=".ShowActivity"
+            android:launchMode="singleTask"/>
 
 
     </application>
